<resources>
    <string name="app_name">YouTube 2.0</string>
    <string name="check_internet_connection">Check internet connection</string>
    <string name="connected">CONNECTED</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="try_again">Try again</string>
    <string name="video_series">video series</string>
    <string name="playlist">Playlist</string>
    <string name="published_at">Published at</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="download">Download</string>
    <string name="play_all">Play all</string>
    <string name="downloading">Downloading</string>
</resources>